# docs/swagger.yaml
@@ -5,20 +5,50 @@ definitions:
       book_id:
         type: integer
     type: object
-  model.BookRequest:
+  model.AuthRequest:
+    properties:
+      password:
+        maxLength: 50
+        minLength: 6
+        type: string
+      username:
+        maxLength: 50
+        minLength: 3
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  model.BookCreateRequest:
     properties:
       author:
+        maxLength: 255
+        minLength: 1
         type: string
       category_id:
+        minimum: 1
         type: integer
       price:
+        minimum: 0
         type: integer
       stock:
+        minimum: 0
         type: integer
       title:
+        maxLength: 255
+        minLength: 1
         type: string
       year:
+        maximum: 2100
+        minimum: 1800
         type: integer
+    required:
+    - author
+    - category_id
+    - price
+    - stock
+    - title
+    - year
     type: object
   model.BookResponse:
     properties:
@@ -35,16 +65,96 @@ definitions:
       year:
         type: integer
     type: object
+  model.BookUpdateRequest:
+    properties:
+      author:
+        maxLength: 255
+        minLength: 1
+        type: string
+      category_id:
+        minimum: 1
+        type: integer
+      id:
+        minimum: 1
+        type: integer
+      price:
+        minimum: 0
+        type: integer
+      stock:
+        minimum: 0
+        type: integer
+      title:
+        maxLength: 255
+        minLength: 1
+        type: string
+      year:
+        maximum: 2100
+        minimum: 1800
+        type: integer
+    required:
+    - author
+    - category_id
+    - id
+    - price
+    - stock
+    - title
+    - year
+    type: object
   model.Category:
     properties:
+      id:
+        type: integer
       name:
         type: string
     type: object
-  model.UserRequest:
+  model.CategoryResponse:
     properties:
-      password:
+      id:
+        type: integer
+      name:
         type: string
-      username:
+    type: object
+  model.HealthResponse:
+    properties:
+      services:
+        additionalProperties:
+          $ref: '#/definitions/model.Status'
+        type: object
+      status:
+        type: string
+      timestamp:
+        type: string
+      version:
+        type: string
+    type: object
+  model.LoginResponse:
+    properties:
+      token:
+        type: string
+    type: object
+  model.ProblemDetail:
+    properties:
+      detail:
+        type: string
+      instance:
+        type: string
+      status:
+        type: integer
+      title:
+        type: string
+      type:
+        type: string
+    type: object
+  model.RegisterResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  model.Status:
+    properties:
+      message:
+        type: string
+      status:
         type: string
     type: object
 host: localhost:8080
@@ -86,11 +196,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       summary: Get available books
       tags:
       - books
@@ -104,7 +214,7 @@ paths:
         name: book
         required: true
         schema:
-          $ref: '#/definitions/model.BookRequest'
+          $ref: '#/definitions/model.BookCreateRequest'
       produces:
       - application/json
       responses:
@@ -115,15 +225,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Create a new book
@@ -150,19 +260,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Delete a book
@@ -188,15 +298,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       summary: Get book by ID
       tags:
       - books
@@ -215,7 +325,7 @@ paths:
         name: book
         required: true
         schema:
-          $ref: '#/definitions/model.BookRequest'
+          $ref: '#/definitions/model.BookUpdateRequest'
       produces:
       - application/json
       responses:
@@ -226,19 +336,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Update a book
@@ -261,15 +371,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Get user's cart
@@ -297,19 +407,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Book not found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Add book to cart
@@ -330,19 +440,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "422":
           description: Insufficient stock
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Purchase cart
@@ -370,19 +480,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Book not found in cart
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Remove book from cart
@@ -400,12 +510,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.Category'
+              $ref: '#/definitions/model.CategoryResponse'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       summary: Get all categories
       tags:
       - categories
@@ -425,20 +535,18 @@ paths:
       responses:
         "201":
           description: Created
-          schema:
-            $ref: '#/definitions/model.Category'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Create a new category
@@ -460,24 +568,22 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/model.Category'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Update a category
@@ -499,24 +605,22 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            type: string
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       security:
       - ApiKeyAuth: []
       summary: Delete a category
@@ -538,22 +642,41 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Category'
+            $ref: '#/definitions/model.CategoryResponse'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "404":
           description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       summary: Get category by ID
       tags:
       - categories
+  /health:
+    get:
+      consumes:
+      - application/json
+      description: Get the health status of the server and its dependencies
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.HealthResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/model.HealthResponse'
+      summary: Health check
+      tags:
+      - system
   /login:
     post:
       consumes:
@@ -565,28 +688,26 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/model.UserRequest'
+          $ref: '#/definitions/model.AuthRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Returns JWT token
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/model.LoginResponse'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       summary: User login
       tags:
       - auth
@@ -601,28 +722,26 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/model.UserRequest'
+          $ref: '#/definitions/model.AuthRequest'
       produces:
       - application/json
       responses:
         "201":
           description: User created successfully
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/model.RegisterResponse'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "409":
           description: Username already exists
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/model.ProblemDetail'
       summary: Register new user
       tags:
       - auth
